--- a/paper2/2-related-work.tex
+++ b/paper2/2-related-work.tex
@@ -40,7 +40,7 @@
 Given a sensitive attribute $s$ (for example, gender or race) and inputs $\bm{x}$,
 a fair representation $\bm{z}$ of $\bm{x}$ is then one for which $\bm{z} \perp s$ holds,
 while ideally also being predictive of the class label $y$.
-\citet{ZemWuSwePitetal13} was the first to propose the learning of fair representations which allow for transfer to new classification tasks.
+\citet{zemel2013learning} was the first to propose the learning of fair representations which allow for transfer to new classification tasks.
 More recent methods are often based on variational autoencoders (VAEs)~\citep{kingma2013auto,louizos2016variational,edwards2016censoring,beutel2017data}.
 The achieved fairness of the representation can be measured with various fairness metrics.
 These measure, however, usually how fair the predictions of a classifier are
