--- a/allreferences.bib
+++ b/allreferences.bib
@@ -257,16 +257,6 @@
   numpages	= {38}
 }
 
-@InProceedings{	  Chiappa19,
-  title		= {Path-specific counterfactual fairness},
-  author	= {Chiappa, Silvia},
-  booktitle	= {Proceedings of the AAAI Conference on Artificial
-		  Intelligence},
-  volume	= {33},
-  pages		= {7801--7808},
-  year		= {2019}
-}
-
 @InProceedings{	  chiappa2019path,
   title		= {Path-specific counterfactual fairness},
   author	= {Chiappa, Silvia},
@@ -304,17 +294,6 @@
   year		= {2018}
 }
 
-@Article{	  chouldechova17,
-  title		= {Fair prediction with disparate impact: A study of bias in
-		  recidivism prediction instruments},
-  author	= {Chouldechova, Alexandra},
-  journal	= {Big data},
-  volume	= {5},
-  number	= {2},
-  pages		= {153--163},
-  year		= {2017}
-}
-
 @Article{	  chouldechova2017fair,
   title		= {Fair prediction with disparate impact: A study of bias in
 		  recidivism prediction instruments},
@@ -323,9 +302,7 @@
   volume	= {5},
   number	= {2},
   pages		= {153--163},
-  year		= {2017},
-  publisher	= {Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New
-		  Rochelle, NY 10801 USA}
+  year		= {2017}
 }
 
 @Article{	  clanuwat2018deep,
@@ -368,15 +345,6 @@
   year		= {2018}
 }
 
-@Article{	  creager2019flexibly,
-  title		= {Flexibly fair representation learning by disentanglement},
-  author	= {Creager, Elliot and Madras, David and Jacobsen,
-		  J{\"o}rn-Henrik and Weis, Marissa A and Swersky, Kevin and
-		  Pitassi, Toniann and Zemel, Richard},
-  journal	= {arXiv preprint arXiv:1906.02589},
-  year		= {2019}
-}
-
 @InProceedings{	  creager2020causal,
   title		= {Causal Modeling for Fairness In Dynamical Systems},
   author	= {Creager, Elliot and Madras, David and Pitassi, Toniann and
@@ -394,17 +362,17 @@
 
 @InProceedings{	  creager2020environment,
   title		= {Environment Inference for Invariant Learning},
-  author	= {Creager, Elliot and Jacobsen, J{\"o}rn-Henrik and Zemel,
-		  Richard},
+  author	= {Elliot Creager and J{\"{o}}rn{-}Henrik Jacobsen and Richard
+		  Zemel},
   booktitle	= {ICML Workshop on Uncertainty and Robustness},
   year		= {2020}
 }
 
-@InProceedings{	  CreMadJacWeietal19,
+@InProceedings{	  creager2019flexibly,
   title		= {Flexibly Fair Representation Learning by Disentanglement},
-  author	= {Creager, Elliot and Madras, David and Jacobsen,
-		  Joern-Henrik and Weis, Marissa and Swersky, Kevin and
-		  Pitassi, Toniann and Zemel, Richard},
+  author	= {Elliot Creager and David Madras and J{\"{o}}rn{-}Henrik Jacobsen
+      and Marissa Weis and Kevin Swersky and
+		  Toniann Pitassi and Richard Zemel},
   booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {1436--1445},
   year		= {2019},
@@ -815,23 +783,11 @@
 }
 
 @InProceedings{	  hardt2016equality,
-  title		= {Equality of opportunity in supervised learning},
-  author	= {Hardt, Moritz and Price, Eric and Srebro, Nati and
-		  others},
-  booktitle	= {Advances in neural information processing systems},
-  pages		= {3315--3323},
-  year		= {2016}
-}
-
-@InProceedings{	  HarPriSre16,
   title		= {Equality of Opportunity in Supervised Learning},
   author	= {Hardt, Moritz and Price, Eric and Srebro, Nati},
-  booktitle	= {Advances in Neural Information Processing Systems 29},
-  editor	= {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon
-		  and R. Garnett},
+  booktitle	= {Advances in Neural Information Processing Systems},
   pages		= {3315--3323},
-  year		= {2016},
-  publisher	= {Curran Associates, Inc.}
+  year		= {2016}
 }
 
 @InProceedings{	  HasSriNamLia18,
@@ -994,8 +950,8 @@
 }
 
 @InProceedings{	  JacBehZemBet19,
-  author	= {{Jacobsen}, J{\"o}rn-Henrik and {Behrmann}, Jens and
-		  {Zemel}, Richard and {Bethge}, Matthias},
+  author	= {J{\"{o}}rn{-}Henrik Jacobsen and Jens Behrmann and
+		  Richard Zemel  and Matthias Bethge},
   title		= "{Excessive Invariance Causes Adversarial Vulnerability}",
   booktitle	= {International Conference on Learning Representations
 		  (ICLR)},
@@ -1011,20 +967,8 @@
   year		= {2018}
 }
 
-@InCollection{	  JaiRexAbdNat18,
-  title		= {Unsupervised Adversarial Invariance},
-  author	= {Jaiswal, Ayush and Wu, Rex Yue and Abd-Almageed, Wael and
-		  Natarajan, Prem},
-  booktitle	= {Advances in Neural Information Processing Systems 31},
-  editor	= {S. Bengio and H. Wallach and H. Larochelle and K. Grauman
-		  and N. Cesa-Bianchi and R. Garnett},
-  pages		= {5092--5102},
-  year		= {2018},
-  publisher	= {Curran Associates, Inc.}
-}
-
 @InProceedings{	  jaiswal2018unsupervised,
-  title		= {Unsupervised adversarial invariance},
+  title		= {Unsupervised Adversarial Invariance},
   author	= {Jaiswal, Ayush and Wu, Rex Yue and Abd-Almageed, Wael and
 		  Natarajan, Prem},
   booktitle	= {Advances in Neural Information Processing Systems},
@@ -1032,24 +976,11 @@
   year		= {2018}
 }
 
-@InCollection{	  JaiWuAbdNat18,
-  title		= {Unsupervised Adversarial Invariance},
-  author	= {Jaiswal, Ayush and Wu, Rex Yue and Abd-Almageed, Wael and
-		  Natarajan, Prem},
-  booktitle	= {Advances in Neural Information Processing Systems 31},
-  editor	= {S. Bengio and H. Wallach and H. Larochelle and K. Grauman
-		  and N. Cesa-Bianchi and R. Garnett},
-  pages		= {5092--5102},
-  year		= {2018},
-  publisher	= {Curran Associates, Inc.}
-}
-
 @Article{	  JaiWuAbdNat19,
   author	= {Ayush Jaiswal and Rex Yue Wu and Wael AbdAlmageed and
 		  Premkumar Natarajan},
   title		= {Unified Adversarial Invariance},
-  journal	= {CoRR},
-  volume	= {abs/1905.03629},
+  journal={arXiv preprint arXiv:1905.03629},
   year		= {2019}
 }
 
@@ -1115,25 +1046,11 @@
 		  Prejudiced Data},
   author	= {Kallus, Nathan and Zhou, Angela},
   booktitle	= {Proceedings of the 35th International Conference on
-		  Machine Learning},
+		  Machine Learning (ICML)},
   pages		= {2439--2448},
   year		= {2018},
   volume	= {80},
   month		= {7}
-}
-
-@InProceedings{	  KalZho18,
-  author	= {Nathan Kallus and Angela Zhou},
-  editor	= {Jennifer G. Dy and Andreas Krause},
-  title		= {Residual Unfairness in Fair Machine Learning from
-		  Prejudiced Data},
-  booktitle	= {Proceedings of the 35th International Conference on
-		  Machine Learning, {ICML} 2018},
-  series	= {Proceedings of Machine Learning Research},
-  volume	= {80},
-  pages		= {2444--2453},
-  publisher	= {{PMLR}},
-  year		= {2018}
 }
 
 @Article{	  KamCal12,
@@ -1167,16 +1084,6 @@
   pages		= {1--33},
   year		= {2012},
   publisher	= {Springer}
-}
-
-@InProceedings{	  kamishima2011fairness,
-  title		= {Fairness-aware learning through regularization approach},
-  author	= {Kamishima, Toshihiro and Akaho, Shotaro and Sakuma, Jun},
-  booktitle	= {Data Mining Workshops (ICDMW), 2011 IEEE 11th
-		  International Conference on},
-  pages		= {643--650},
-  year		= {2011},
-  organization	= {IEEE}
 }
 
 @InProceedings{	  kamishima2012fairness,
@@ -1346,14 +1253,6 @@
   year		= {2019}
 }
 
-@InProceedings{	  KinBa15,
-  title		= {Adam: A Method for Stochastic Optimization},
-  author	= {Diederik P. Kingma and Jimmy Ba},
-  booktitle	= {International Conference on Learning Representations
-		  (ICLR)},
-  year		= {2015}
-}
-
 @InProceedings{	  KinDha18,
   author	= {Diederik P. Kingma and Prafulla Dhariwal},
   title		= {Glow: {G}enerative Flow with {I}nvertible 1x1
@@ -1370,16 +1269,6 @@
   booktitle	= {International Conference on Learning Representations
 		  (ICLR)},
   year		= {2014}
-}
-
-@InProceedings{	  kingma2014adam,
-  author	= {Diederik P. Kingma and Jimmy Ba},
-  editor	= {Yoshua Bengio and Yann LeCun},
-  title		= {Adam: {A} Method for Stochastic Optimization},
-  booktitle	= {3rd International Conference on Learning Representations,
-		  {ICLR} 2015},
-  year		= {2015},
-  url		= {http://arxiv.org/abs/1412.6980}
 }
 
 @InProceedings{	  kingma2015adam,
@@ -1400,15 +1289,6 @@
 }
 
 @Article{	  kleinberg2016inherent,
-  title		= {Inherent trade-offs in the fair determination of risk
-		  scores},
-  author	= {Kleinberg, Jon and Mullainathan, Sendhil and Raghavan,
-		  Manish},
-  journal	= {arXiv preprint arXiv:1609.05807},
-  year		= {2016}
-}
-
-@Article{	  KleMulRag16,
   title		= {Inherent trade-offs in the fair determination of risk
 		  scores},
   author	= {Kleinberg, Jon and Mullainathan, Sendhil and Raghavan,
@@ -1522,14 +1402,6 @@
 		  E},
   journal	= {arXiv preprint arXiv:1607.06450},
   year		= {2016}
-}
-
-@InProceedings{	  liu2015celeba,
-  author	= {Ziwei Liu and Ping Luo and Xiaogang Wang and Xiaoou Tang},
-  title		= {Deep Learning Face Attributes in the Wild},
-  booktitle	= {Proceedings of International Conference on Computer Vision
-		  (ICCV)},
-  year		= {2015}
 }
 
 @InProceedings{	  liu2015faceattributes,
@@ -2134,25 +2006,13 @@
 }
 
 @InProceedings{	  wick2019unlocking,
-  title		= {Unlocking fairness: a trade-off revisited},
+  title		= {Unlocking Fairness: a Trade-off Revisited},
   author	= {Wick, Michael and Panda, Swetasudha and Tristan,
 		  Jean-Baptiste},
   booktitle	= {Advances in Neural Information Processing Systems},
   pages		= {8783--8792},
   volume	= {32},
   year		= {2019}
-}
-
-@InCollection{	  WicPanTri19,
-  title		= {Unlocking Fairness: a Trade-off Revisited},
-  author	= {Wick, Michael and Panda, Swetasudha and Tristan,
-		  Jean-Baptiste},
-  booktitle	= {Advances in Neural Information Processing Systems 32},
-  editor	= {H. Wallach and H. Larochelle and A. Beygelzimer and F.
-		  dAlch\'{e}-Buc and E. Fox and R. Garnett},
-  pages		= {8783--8792},
-  year		= {2019},
-  publisher	= {Curran Associates, Inc.}
 }
 
 @InProceedings{	  williams1996gaussian,
@@ -2271,8 +2131,8 @@
 }
 
 @InProceedings{	  zafar2017fairnesstreatment,
-  title		= {Fairness beyond disparate treatment \& disparate impact:
-		  Learning classification without disparate mistreatment},
+  title		= {Fairness Beyond Disparate Treatment \& Disparate Impact:
+		  Learning Classification without Disparate Mistreatment},
   author	= {Zafar, Muhammad Bilal and Valera, Isabel and Gomez
 		  Rodriguez, Manuel and Gummadi, Krishna P},
   booktitle	= {Proceedings of the 26th International Conference on World
@@ -2282,17 +2142,6 @@
   organization	= {International World Wide Web Conferences Steering
 		  Committee},
   sorttitle	= {b}
-}
-
-@InProceedings{	  ZafValRodGum17b,
-  author	= {Muhammad Bilal Zafar and Isabel Valera and Manuel
-		  Gomez{-}Rodriguez and Krishna P. Gummadi},
-  title		= {Fairness Beyond Disparate Treatment {\&} Disparate Impact:
-		  Learning Classification without Disparate Mistreatment},
-  booktitle	= {Proceedings of the 26th International Conference on World
-		  Wide Web, {WWW} 2017, Perth, Australia, April 3-7, 2017},
-  pages		= {1171--1180},
-  year		= {2017}
 }
 
 @InProceedings{	  zaheer2017deep,
@@ -2306,31 +2155,12 @@
 }
 
 @InProceedings{	  zemel2013learning,
-  title		= {Learning fair representations},
-  author	= {Zemel, Rich and Wu, Yu and Swersky, Kevin and Pitassi,
-		  Toni and Dwork, Cynthia},
-  booktitle	= {International Conference on Machine Learning},
-  pages		= {325--333},
-  year		= {2013}
-}
-
-@InProceedings{	  ZemeWuSwePitetal13,
+  title		= {Learning Fair Representations},
   author	= {Zemel, Richard and Wu, Yu and Swersky, Kevin and Pitassi,
 		  Toniann and Dwork, Cynthia},
-  title		= {Learning Fair Representations},
-  booktitle	= {International Conference on Machine Learning (ICML)},
+  booktitle	= {International Conference on Machine Learning},
   series	= {Proceedings of Machine Learning Research},
-  year		= {2013},
-  editor	= {S. Dasgupta and D. McAllester},
   pages		= {325--333},
-  publisher	= {PMLR}
-}
-
-@InProceedings{	  ZemWuSwePitetal13,
-  title		= {Learning Fair Representations},
-  author	= {Richard S. Zemel and Yu Wu and Kevin Swersky and Toni
-		  Pitassi and Cynthia Dwork},
-  booktitle	= {International Conference on Machine Learning (ICML)},
   year		= {2013}
 }
 
