--- a/paper2/appendix.tex
+++ b/paper2/appendix.tex
@@ -23,9 +23,6 @@
 
 % Macros
 % \def\ci{\perp\!\!\!\perp}
-% \newcommand{\myles}[1]{\textcolor{blue}{\textbf{Myles:} #1}}
-% \newcommand{\thomas}[1]{\textcolor{red}{\textbf{Thomas:} #1}}
-% \newcommand{\oliver}[1]{\textcolor{magenta}{\textbf{Oliver:} #1}}
 % \newcommand*\diff{\mathop{}\!\mathrm{d}}
 % \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
@@ -91,26 +88,26 @@ For both cMNIST and CelebA, we downsample to a feature map with spatial dimensio
 For the Adult dataset, the encoding is a vector of size $35$. 
 The output layer specifies both the parameters (mean and variance) of the representation's distribution. 
 In all cases the KL-divergence is computed with respect to a standard isotropic Gaussian prior. 
-Details of the encoder architectures can be found in Table \ref{tab:vae_architectures}. The loss pre-factors were sampled from a logarithmic scale; without proper balancing the networks can exhibit instability, especially during the early stages of training.
+Details of the encoder architectures can be found in table \ref{tab:vae_architectures}. The loss pre-factors were sampled from a logarithmic scale; without proper balancing the networks can exhibit instability, especially during the early stages of training.
 
-\begin{table*}[ht]
+\begin{table}[tp]
 \caption{INN architecture used for each dataset.}
 \label{tab:inn_architectures}
 \centering
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}llllll}
+\begin{tabular}{l@{\extracolsep{1cm}}llllll}
 \toprule
 \multicolumn{1}{l}{Dataset} & Levels & Level depth & Coupling channels & Input to discriminator(s) \\ \midrule
 UCI Adult                   & 1      & 1     & 35       & Null-samples       \\
 cMNIST                      & 3      & 16     & 512      & Encodings               \\
 CelebA                      & 3      & 32     & 512      & Encodings        \\ \bottomrule
-\end{tabular*}
-\end{table*}
+\end{tabular}
+\end{table}
 
-\begin{table}[ht]
+\begin{table}[tp]
 \caption{cVAE encoder architecture used for each dataset. The decoder architecture in each case mirrors that of its encoder counterpart through use of transposed convolutions. For the adult dataset we apply $\ell_2$ and cross-entropy losses to the reconstructions of the continuous features and discrete features, respectively.}
 \label{tab:vae_architectures}
 \centering
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}lllll}
+\begin{tabular}{l@{\extracolsep{1cm}}lllll}
 \toprule
 Dataset   & Initial channels & Levels & $\beta$ & Recon. loss \\
 \midrule
@@ -118,11 +115,11 @@ UCI Adult & 35               & --     & 0       & $\ell_2$ + CE\\
 cMNIST    & 32               & 4      & 0.01    & $\ell_2$ \\
 CelebA    & 32               & 5      & 1       & $\ell_1$ \\ 
 \bottomrule
-\end{tabular*}
+\end{tabular}
 \end{table}
 
 \subsection{Additional results}\label{sec:additional-results}
-\subsubsection{Detailed results for UCI Adult dataset}\label{ssec:detailed-adult}
+\paragraph{Detailed results for UCI Adult dataset.}
 This census data is commonly used to evaluate models focused on algorithmic fairness.
 Following convention, we designate ``gender'' as the $s$ and whether an individual's salary is \$50,000 or greater as $y$.
 We show the performance of our approach in comparison to baseline approaches in Fig.~\ref{fig:big-adult-chart}.
@@ -139,8 +136,6 @@ Results shown in Fig.~\ref{fig:big-adult-chart} show that whilst our model fails
   }%
   \label{fig:big-adult-chart}
 \end{figure}
-
-\subsubsection{Multinomial sensitive attributes}\label{ssec:multi-s}
 \begin{figure}[htb]
     \centering
     \includegraphics[width=0.7\textwidth]{Figures/celeba_multi_s.pdf}
@@ -150,7 +145,9 @@ Results shown in Fig.~\ref{fig:big-adult-chart} show that whilst our model fails
     }%
     \label{fig:multi-s}
 \end{figure}
-\noindent In addition to binary sensitive attribute $s$,
+
+\paragraph{Multinomial sensitive attributes.}
+In addition to binary sensitive attribute $s$,
 we also investigate multinomial $s$ in the CelebA dataset.
 First, we do experiments with hair color, where $s$ has three possible values:
 blond hair, brown hair and black hair.
@@ -159,14 +156,13 @@ where $s$ has four possible values, each of which is a combination of a gender a
 Young/Female, Young/Male, Old/Female and Old/Male.
 To evaluate the fairness for multinomial $s$, we use the Hirschfeld-Gebelein-R\'enyi Maximum Correlation Coefficient (HGR) \citep{mary2019fairness} that is defined on the domain $[0, 1]$ and gives $\text{HGR}(Y,S)=0$ iff $Y \perp S$
 and 1 if there is a deterministic function to map between them.
-Results can be found in Figure~\ref{fig:multi-s}.
+Results can be found in Figure~\ref{fig:multi-s}.\\
 
-\subsubsection{Investigation into the size of $z_b$}\label{ssec:size-of-zb}
-\begin{table}[ht]
+\begin{table}[tp]
 \caption{Results on the CelebA dataset with different sizes of $z_b$.}
     \label{tab:zs-ablation}
     \centering
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}lrr}
+\begin{tabular}{l@{\extracolsep{1cm}}lrr}
 \toprule
  $|z_b|$ & $|z_b|/|z|$ &  Accuracy &   DP diff \\
 \midrule
@@ -177,17 +173,17 @@ Results can be found in Figure~\ref{fig:multi-s}.
          30 &             0.2442\% &  0.74 &  0.23 \\
          50 &             0.4070\% &  0.68 &  0.27 \\
 \bottomrule
-\end{tabular*}
+\end{tabular}
 \end{table}
-\noindent In the cFlow model, the size of $z_b$ is an important hyperparameter which can affect the result significantly.
+\noindent\textsc{Investigation into the size of $z_b$.}
+\;\; In the cFlow model, the size of $z_b$ is an important hyperparameter which can affect the result significantly.
 Here we investigate the sensitivity of the model to the choice of $z_b$ size.
 Table~\ref{tab:zs-ablation} shows accuracy and fairness (as measured by \emph{DP diff}) for different sizes of $z_b$.
 The results show that both too large and too small $z_b$ is detrimental.
 However, they also show that the model is not overly sensitive to this parameter:
 both sizes 5 and 10 achieve nearly identical results.
 
-\subsubsection{Additional fairness metrics}\label{ssec:additional-fair-metr}
-\begin{table}[]
+\begin{table}[tbp]
     \caption{
         Additional fairness metrics for the experiments on the CelebA dataset (Fig. 5 from the main text).
         \emph{TPR diff.} refers to the difference in true positive rate.
@@ -203,7 +199,7 @@ both sizes 5 and 10 achieve nearly identical results.
       cFlow &      0.83 &     0.10 &      0.15 &      0.25 \\
        cVAE &      0.82 &     0.05 &      0.09 &      0.18 \\
         CNN &      0.61 &     0.63 &      0.70 &      0.64 \\
- Ln2L\citep{kim2019learning} &      0.52 &     0.00 &      0.00 &      0.00 \\
+ Ln2L &      0.52 &     0.00 &      0.00 &      0.00 \\
 \bottomrule
 \end{tabular}}
 \hfill
@@ -215,11 +211,12 @@ both sizes 5 and 10 achieve nearly identical results.
       cFlow &      0.82 &     0.33 &      0.28 &      0.21 \\
        cVAE &      0.81 &     0.16 &      0.10 &      0.05 \\
         CNN &      0.67 &     0.75 &      0.66 &      0.76 \\
-Ln2L\citep{ln2l} &      0.51 &     0.08 &      0.06 &      0.09 \\
+Ln2L &      0.51 &     0.08 &      0.06 &      0.09 \\
 \bottomrule
 \end{tabular}}
 \end{table}
-\noindent In addition to \emph{DP diff}, we report here the result from other fairness measures.
+\paragraph{Additional fairness metrics.}
+In addition to \emph{DP diff}, we report here the result from other fairness measures.
 These results are from the same setup as those reported in the main paper.
 We report the difference in true positive rates (TPR) between the two groups (male and female), which corresponds to a measure of Equality of Opportunity,
 and the difference in true negative rates (TNR) between the two groups.
@@ -227,21 +224,21 @@ and the difference in true negative rates (TNR) between the two groups.
 \subsection{Optimisation Details}\label{sec:optimisation-details}
 \noindent All our models were trained using the RAdam optimiser \citep{liu2019variance} with learning rates $3\times10^{-4}$ and $1\times10^{-3}$ for the encoder/discriminator pair and classifier respectively. A batch size of 128 was used for all experiments.
 
-We now detail the optimisation settings, including the choice of adversary, specific to each dataset. Details of the cVAE and cFlow architectures can be found in Table \ref{tab:vae_architectures} and Table \ref{tab:inn_architectures}, respectively.
+We now detail the optimisation settings, including the choice of adversary, specific to each dataset. Details of the cVAE and cFlow architectures can be found in table \ref{tab:vae_architectures} and table \ref{tab:inn_architectures}, respectively.
 
-\subsubsection{UCI Adult} 
+\paragraph{UCI Adult.} 
 For this dataset our experiment benefited from using null-samples as inputs to the adversary of the cFlow model. Unlike for the image datasets, we found a single adversary to be sufficient. This was realised as a multi-layer perceptron (MLP) with one hidden layer, 256 units wide. The INN performs a bijection of the form $f: \mathbb{R}^n \rightarrow \mathbb{R}^n$. However, the adult dataset is composed of mostly discrete (binary/categorical) features. To achieve good performance, we found it necessary to first pre-process the inputs with a pretrained autoencoder, using its encodings as the input to the cFlow model, as well as to the adversary. The learned representations were evaluated with a logistic regression model from scikit-learn \citep{scikit-learn}, using the standard settings. All baseline models were trained for 200 epochs.
 The Ln2L \citep{kim2019learning} and MLP baselines share the architecture of the cVAE's encoder, only with a classification layer affixed.
 
-\subsubsection{Coloured MNIST}
-Each level of the architecture used for the downstream classifier and na\"ive baseline alike consists of two convolutional layers, each with kernel size 3 and followed by Batch Norm \citep{ioffe2015batch} and ReLU activation. For the Ln2L baseline, we use an a setup identical to that described in \citet{ln2l}. Each level has twice the number of filters in its convolutional layer and half the spatial input dimensions as the last. The original input is downsampled to the point of the output being reduced to a vector, to which a fully-connected classification layer is applied.
+\paragraph{Coloured MNIST.}
+Each level of the architecture used for the downstream classifier and na\"ive baseline alike consists of two convolutional layers, each with kernel size 3 and followed by Batch Norm \citep{ioffe2015batch} and ReLU activation. For the Ln2L baseline, we use an a setup identical to that described in \citet{kim2019learning}. Each level has twice the number of filters in its convolutional layer and half the spatial input dimensions as the last. The original input is downsampled to the point of the output being reduced to a vector, to which a fully-connected classification layer is applied.
 
 To allow for an additional level in the INN (the downsampling operations requiring the number of spatial dimensions to be even), the data was zero-padded to a size of $32\times32$. The cVAE and cFlow models were trained for 50 and 200 epochs respectively, using $\ell_2$ reconstruction loss for the former. The downstream classifier and all baselines were trained for 40 epochs. For both of our models, an ensemble of 5 adversaries was applied to the encodings, with each member taking the form of a fully-connected ResNet, 2 blocks in depth, with SeLU activation \citep{klambauer2017self}. The adversaries were reinitialised independently with probability $0.2$ at the end of each epoch. While the adversaries could equally well take  null-samples as input, as done for the Adult dataset, doing so requires the performing of both forward and inverse passes each iteration, which, for the convolutional INNs of the depths we require for the image datasets, introduces a large computational overhead, while also showing to be the less stable of the two approaches in our preliminary experiments.
 
-\subsubsection{CelebA} 
+\paragraph{CelebA.} 
 The downstream classifier and na\"ive baseline take the same form as described above for cMNIST, but with an additional level with 32 filters in each of its convolutions at the top of the network. For this dataset we adapt the Ln2L model by simply considering it as an augmentation the na\"ive baseline's objective function, with the entropy loss applied to the output of the final convolutional layer. These models were again trained for 40 epochs, which we found to be sufficient for convergence for the tasks in question. The cVAE and cFlow models were respectively trained for 100 epochs and 30 epochs, using $\ell_1$ reconstruction loss for the former. Compared with cMNIST, the size of the adversarial ensemble was increased to 10, the reinitialisation probability to 0.33, but no changes were made to the architectures of its members.
 
-\subsubsection{The Pitfalls of Adversarial Training}\label{ssec:pitfalls}
+\paragraph{The Pitfalls of Adversarial Training.}
 Adversarial learning has become one of the go-to methods for enforcing invariance in fair representation learning \citep{ganin2016domain} with MMD \citep{louizos2016variational} and HSIC \citep{QuaShaTho19}, being popular non-parametric alternatives.
 \citet{ganin2016domain} proposed adversarial learning for domain adaptation problems, with \citet{edwards2016censoring} soon after making this and learning a representation promoting demographic parity.
 The adversarial approach carries the benefits of being both efficient and scalable to multi-class categorical variables, which many sensitive attributes are in practice, whereas the non-parametric methods only permit pair-wise comparison.
@@ -257,11 +254,11 @@ However, this does not prevent the emergence of the aforementioned cyclicity.
 
 We try to mitigate the aforementioned degeneracies by maintaining a diverse set of adversaries, as has shown to be effective for GAN training \citep{durugkar2016generative}, and by decorrelating the individual trajectories by intermittently re-initialising them with some small probability following each iteration.
 
-\subsubsection{Tuning the Partition Sizes}\label{ssec:partition-size-matters}
+\paragraph{Tuning the Partition Sizes.}
 There are several ways of ensuring that $z_b$ is of sufficient size to capture all $s$ dependencies, while at time is minimised such as that information unrelated to $s$ is maximally preserved. We adopt the straightforward search strategy of, starting from some initial guess, calibrating the value according to accuracy attained by a classifier trained to predict $s$ from $z_b$ on a held-out subset of the representative set, which is measured whenever the adversarial loss plateaus. If the accuracy is above chance level then that suggests the size of the $z_b$ partition, $|z_b|$, needs to be increased to accommodate more information about $s$. If the accuracy is found to be at chance level then are two possibilities: 1) $|z_b|$ is already optimal; 2) $|z_b|$ is large enough that it fully contains both information $s$ as well as that of a portion of $y$. If the former is true, then perturbations around the current value allow us to confirm this; if the latter is true then decreasing the value was indeed the correct decision.
 
 \subsection{Synthesising Coloured MNIST}\label{sec:color-details}
-\noindent We use a colourised version of MNIST as a controlled setting investigate learning from biased data in the image domain. In the biased training set, each digit is assigned a unique mean RGB value parameterising the multivariate Gaussian from which its colour is drawn. These values were chosen to be maximally dispersed across the 8-bit colour spectrum and are listed in Table \ref{tab:cmnist_rgb_values}. By adjusting the standard deviation, $\sigma$, of the Gaussians, we adjust the degree of bias in the dataset. When $\sigma=0$, there is a perfect and noiseless correspondence between colour and digit class which a classifier can exploit. The classifier can favour the learning of the low-level spurious feature over those higher level features constituent of the digit's class. As the standard deviation increases, the sampled RGB values are permitted to drift further from the mean, leading to overlap between the samples of the colour distributions and reducing their reliability as indicators of the digit class. In the test and representative sets alike, however, the colour of each sample is sampled from one of the 10 distributions randomly, such that colour can no longer be leveraged as a shortcut to predicting the digit's class.
+\noindent We use a colourised version of MNIST as a controlled setting investigate learning from biased data in the image domain. In the biased training set, each digit is assigned a unique mean RGB value parameterising the multivariate Gaussian from which its colour is drawn. These values were chosen to be maximally dispersed across the 8-bit colour spectrum and are listed in table \ref{tab:cmnist_rgb_values}. By adjusting the standard deviation, $\sigma$, of the Gaussians, we adjust the degree of bias in the dataset. When $\sigma=0$, there is a perfect and noiseless correspondence between colour and digit class which a classifier can exploit. The classifier can favour the learning of the low-level spurious feature over those higher level features constituent of the digit's class. As the standard deviation increases, the sampled RGB values are permitted to drift further from the mean, leading to overlap between the samples of the colour distributions and reducing their reliability as indicators of the digit class. In the test and representative sets alike, however, the colour of each sample is sampled from one of the 10 distributions randomly, such that colour can no longer be leveraged as a shortcut to predicting the digit's class.
 
 \subsection{Stabilising the Coupling layers}\label{sec:those-darn-coupling-layers}
 \noindent Heuristically, we found that  applying an additional nonlinear function to the scale coefficient of the form
@@ -271,11 +268,11 @@ There are several ways of ensuring that $z_b$ is of sufficient size to capture a
 \end{align}
 greatly improved the stability of the affine coupling layers. Here, $\sigma$ is the logistic function, which we shift to be centred on 1 so that zero-initialising $f$ results in the coupling layers initially performing an identity-mapping.
 
-\begin{table}[ht]
+\begin{table}[tp]
 \caption{Mean RGB values (in practice normalised to $[0, 1]$) parameterising the Multivariate Gaussian distributions from which each digit's colour is sampled in the biased (training) dataset. In the representative and test sets,  the colour of each digit is sampled from one of the specified Gaussian distributions at random.}
 \label{tab:cmnist_rgb_values}
 \centering
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}lll}
+\begin{tabular}{l@{\extracolsep{1cm}}lll}
 \toprule
 Digit & Colour Name & Mean RGB      \\ \midrule
 0     & Cyan        & (0, 255, 255) \\
@@ -288,7 +285,7 @@ Digit & Colour Name & Mean RGB      \\ \midrule
 7     & Purple      & (128, 0, 128) \\
 8     & Red         & (255, 0, 0)   \\
 9     & Yellow      & (255, 255, 0) \\ \bottomrule
-\end{tabular*}
+\end{tabular}
 \end{table}
 
 \subsection{Qualitative Results for CelebA}\label{sec:qual-results-celeba}
@@ -365,7 +362,7 @@ even if the input is unfamiliar, no information should be lost when trying to tr
 This works as long as only the information about $s$ ends up in the $z_b$ partition.
 If $s$ takes a form similar to that which we pre-trained on, and can thus be correctly partitioned in the latent space, by complement we have the information about $\neg s$ stored in the $z_u$ partition, without presupposing similarity to the $\neg s$ observed during pre-training.
 
-\subsubsection{Transferring from mixed-NIST to MNIST}
+\paragraph{Transferring from mixed-NIST to MNIST.}
 We test our hypothesis by comparing the performance of the cFlow and cVAE models pre-trained on a mixture of datasets belonging to the NIST family, colourised in the same way as cMNIST, while the downstream train and test sets remain the same as in the original cMNIST experiments. Specifically, we create this representative set by sampling 24,000 images (to match the cardinality of the original representative set) from EMNIST (letters only)~\citep{cohen2017emnist}, Fashion\-MNIST~\citep{xiao2017fashion} and KMNIST~\citep{clanuwat2018deep}, in equal proportion. We use the same architectures for the cVAE and cFlow models as we did in the non-transfer learning setting. In terms of hyperparameters, the only change made was to the KL-divergence's pre-factor, finding it necessary to increase it to $1$ to guarantee stability.
 
 The results for the range of $\sigma$ values are shown in Fig.~\ref{fig:cmnist-transfer}. Unsurprisingly, the performance of both models suffers when the representative and test sets do not completely correspond. However, the cFlow model consistently outperforms the cVAE model, with the gap increasing as the bias decreases.
