--- a/paper3/appendix.tex
+++ b/paper3/appendix.tex
@@ -106,11 +106,11 @@
     Results for the Adult Income dataset with \emph{subgroup bias},
     for the binary classification task of predicting whether an individual earns $>$\$50,000 with a binary subgrouping based on \emph{gender}.
     \texttt{ERM (LD)} refers to a model based on ERM (empirical risk minimization),
-    trained on a \textbf{l}abelled \textbf{d}eployment set; thus not suffering from bias in the training set.
-    \textbf{Top left}: Accuracy.
-    \textbf{Top right}: Positive rate ratio.
-    \textbf{Bottom left}: True positive rate ratio.
-    \textbf{Bottom right}: True negative rate ratio.
+    trained on a \emph{l}abelled \emph{d}eployment set; thus not suffering from bias in the training set.
+    \textsc{Top left}: Accuracy.
+    \textsc{Top right}: Positive rate ratio.
+    \textsc{Bottom left}: True positive rate ratio.
+    \textsc{Bottom right}: True negative rate ratio.
     For the \texttt{Ranking} clustering, the clustering accuracy was 69.7\% $\pm$ 0.3\%;
     for \texttt{K-means} it was 43\% $\pm$ 3\%.
     }%
@@ -126,11 +126,11 @@
     Results for the Adult Income dataset with a \emph{missing subgroup},
     for the binary classification task of predicting whether an individual earns $>$\$50,000 with a binary subgrouping based on \emph{gender}.
     \texttt{ERM (LD)} refers to a model based on ERM (empirical risk minimization),
-    trained on a \textbf{l}abelled \textbf{d}eployment set; thus not suffering from bias in the training set.
-    \textbf{Top left}: Accuracy.
-    \textbf{Top right}: Positive rate ratio.
-    \textbf{Bottom left}: True positive rate ratio.
-    \textbf{Bottom right}: True negative rate ratio.
+    trained on a \emph{l}abelled \emph{d}eployment set; thus not suffering from bias in the training set.
+    \textsc{Top left}: Accuracy.
+    \textsc{Top right}: Positive rate ratio.
+    \textsc{Bottom left}: True positive rate ratio.
+    \textsc{Bottom right}: True negative rate ratio.
     For the \texttt{Ranking} clustering, the clustering accuracy was 60.4\% $\pm$ 0.8\%;
     for \texttt{K-means} it was 44\% $\pm$ 3\%.
     }%
@@ -143,7 +143,7 @@ We transform the representation into $62$ real and binary features along with th
 The dataset is naturally imbalanced with respect to gender: 30\% of the males are labelled as earning more than \$50K per year (high income), while only 11\% of females are labelled as such.
 For further details on the dataset construction, see section~\ref{ssec:dataset-construction-adult}.
 %
-Following standard practice in algorithmic fairness  e.g. \citet{ZemeWuSwePitetal13}, we consider gender to be the subgroup label $s$.
+Following standard practice in algorithmic fairness, e.g. \citet{zemel2013learning}, we consider gender to be the subgroup label $s$.
 
 We study the following two settings.
 1) \emph{subgroup bias}: we have labelled training data for males ($s=1$) with both positive and negative outcomes, but for the group of females ($s=0$), we only observe the one-sided negative outcome, so the source $\Omega_{y=1,s=0}$ is missing;
@@ -161,7 +161,7 @@ Generally, we observe a high variance in the results. This is not attributable t
 
 \subsection{Dataset Construction}\label{sec:dataset-construction}
 
-\subsubsection{Coloured MNIST biasing parameters}
+\paragraph{Coloured MNIST biasing parameters.}
 To simulate a real-word setting where the data, labelled or otherwise, is not naturally balanced, we bias the Coloured MNIST training and deployment sets by downsampling certain colour/digit combinations. The proportions of each such combination \emph{retained} in the \emph{subgroup bias} (in which we have one source missing from the training set) and \emph{missing subgroup} (in which we have two sources missing from the training set) are enumerated in table~\ref{color_mnist_biasing_po} and \ref{color_mnist_biasing_id}, respectively.
 For the 3-digit-3-colour variant of the problem, no biasing is applied to either the deployment set or the training set (the missing combinations are specified in the caption accompanying figure~\ref{fig:cmnist-3dig-4miss-add}); this variant was experimented with only under the subgroup-bias setting.
 
@@ -197,7 +197,7 @@ Combination   & \multicolumn{2}{c}{Proportion retained} \\ \cmidrule(lr){2-3}
 \end{tabular}
 \end{table}
 
-\subsubsection{Adult Income}\label{ssec:dataset-construction-adult}
+\paragraph{Adult Income.}\label{ssec:dataset-construction-adult}
 For the Adult Income dataset, we do not need to apply any synthetic biasing as the dataset naturally contains some bias wrt $s$. Thus, we instantiate the deployment set as just a random subset of the original dataset. Explicit balancing of the test set is needed to yield meaningful evaluation, however, namely in the penalizing of biased classifiers, but need be taken in doing so. Balancing the test set such that
 \begin{align}
     |\{x \in X |s=0, y=0\}| &= |\{x \in X |s=1, y=0\}|    \nonumber\\
@@ -220,9 +220,10 @@ That is, all subsets of $\gS \times \gY$ are made to be equally sized. Under thi
  \centering
  \caption{Selected hyperparameters for experiments with Coloured MNIST, Adult and CelebA datasets.}
  \label{tab:hparams}
+\scalebox{0.65}{
  \begin{tabular}{llll}
  \toprule
- & \textbf{Coloured MNIST} & \textbf{Adult} & \textbf{CelebA}       
+ & \textsc{Coloured MNIST} & \textsc{Adult} & \textsc{CelebA}       
  \\ & 2-dig SB / 2-dig MS / 3-dig SB
  \\ \midrule
  Input size  &   $3 \times 32 \times 32$ & $61$ & $3 \times 64 \times 64$ \\  \midrule
@@ -272,9 +273,10 @@ That is, all subsets of $\gS \times \gY$ are made to be equally sized. Under thi
   } \\ 
   \multicolumn{4}{p{\textwidth}}{\footnotesize  \cite{ilse2018attention}.} \\ 
  \end{tabular}
+}
 \end{table*}
 
-The hyperparameters and architectures for the Autoencoder (\texttt{AE}), Predictor and Discriminator subnetworks used for the experiments with all datasets are detailed in Table \ref{tab:hparams}. All networks are trained using the Adam optimiser \citep{KinBa15}.
+The hyperparameters and architectures for the Autoencoder (\texttt{AE}), Predictor and Discriminator subnetworks used for the experiments with all datasets are detailed in Table \ref{tab:hparams}. All networks are trained using the Adam optimiser \citep{kingma2015adam}.
 
 For the Coloured MNIST and CelebA datasets, the baseline \texttt{CNN}, \texttt{DRO}, and \texttt{LfF} (in the case of the former) models use an architecture identical to that of the encoder with two exceptions: 1) max-pooling being used for spatial downsampling instead of strided convolutions; 2) the final convolutional layer is followed by a global average pooling layer followed by a fully-connected classification layer. For evaluating our method, we simply train a linear classifier on top of $z_y$; this is sufficient due to linear-separability being enforced during training by the $y$-predictor.
 For the Adult Income dataset, we use an MLP made up of a single hidden layer 35 units in size, followed by a SELU activation \citep{klambauer2017self}, as both both the downstream classifier for our method, and as the network architecture of the baselines. 
@@ -286,7 +288,7 @@ We can, however, additionally measure the entropy of the predictions on the enco
 We use the latter approach (considering, the learned distance between subspace distributions, accuracy, and reconstruction loss) to inform an extensive grid-search over the hyperparameter space of our model.
 
 For the \texttt{DRO} baseline, we allowed access to the labels of the test set for the purpose of hyperparameters selection, performing a grid-search over multiple splits to avoid overfitting to any particular instantiation.
-Specifically, the threshold ($\eta$) parameter for \texttt{DRO} was determined by a grid-search over the space $\{0.01, 0.1, 0.3, 1.0\}$. The same procedure was carried out for selecting the model capacity constant ( $C$) of the related \texttt{gDRO} baseline.
+Specifically, the threshold ($\eta$) parameter for \texttt{DRO} was determined by a grid-search over the space $\{0.01, 0.1, 0.3, 1.0\}$. The same procedure was carried out for selecting the model capacity constant ($C$) of the related \texttt{gDRO} baseline.
 
 In addition to the losses stated in the distribution matching objective, $\mathcal{L}$, in the main text, we also regularise the encoder by the $\ell^2$ norm of its embedding, multiplied by a small pre-factor, finding this to work better than more complex regularization methods, such as spectral normalization \citep{miyato2018spectral}, for stabilizing training.
 
@@ -296,11 +298,11 @@ For details, see the captions.
 \begin{figure*}[tb]
   \centering
     % \begin{subfigure}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{figures/celeba_attn_map.png}
+    \includegraphics[width=0.9\textwidth]{figures/celeba_attn_map.png}
     % \end{subfigure}
     % \hfill
     % \begin{subfigure}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{figures/cmnist_attn_map.png}
+    \includegraphics[width=0.9\textwidth]{figures/cmnist_attn_map.png}
     % \end{subfigure}
   \caption{
     Example sample-wise attention maps for bags of CelebA (left) and Coloured MNIST (right) images sampled from a balanced deployment set. The training set is biased according to the SB setting where for CelebA ``smiling females'' constitute the missing source and for Colored MNIST {\color{purple}purple} fours constitute the missing source. The attention weights are used during the discriminator's aggregation step to compute a weighted sum over the bag. The attention-weight assigned to each sample is proportional to the lightness of its frame, with black signifying a weight of 0, white a weight of 1. Those samples belonging to the missing subgroup are assigned the highest weight as they signal from which dataset (training vs. deployment) the bag containing them was drawn from.
@@ -348,7 +350,8 @@ For details, see the captions.
 % instead all digits are magenta-colored, which was the majority color in the training set.
 
 \subsection{Code}
-A \texttt{.zip} file is included containing all files needed to reproduce our experiments. Instructions on how to run them can be found in the \texttt{README.md}.
+The code will be published at the following URL: \url{https://github.com/predictive-analytics-lab/fair-dist-matching}.
+Instructions on how to run them can be found in the \texttt{README.md}.
 
 \subsection{Additional metrics}
 Figures~\ref{fig:cmnist-2v4-partial-add}, \ref{fig:cmnist-2v4-miss-s-add},  and \ref{fig:celeba-gender-smiling-add} show the true positive rate (TPR) ratio and the true negative rate (TNR) ratio as additional metrics for Coloured MNIST (2 digits) and CelebA.
@@ -364,16 +367,16 @@ Additionally, we compute the Hirschfeld-Gebelein-R\'enyi (HGR) maximal correlati
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_pr.pdf}
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_tpr.pdf}
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_tnr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_overcluster_acc.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_overcluster_prr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_overcluster_tprr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_partial_overcluster_tnrr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_partial_overcluster_acc.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_partial_overcluster_prr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_partial_overcluster_tprr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_partial_overcluster_tnrr.pdf}
   \caption{
-    Results from \textbf{30 repeats} for the Coloured MNIST dataset with two digits, 2 and 4, with \emph{subgroup bias} for the colour `{\color{purple}purple}': for {\color{purple}purple}, only the digit class `2' is present.
-    \textbf{Top left}: Accuracy.
-    \textbf{Top right}: Positive rate ratio.
-    \textbf{Bottom left}: True positive rate ratio.
-    \textbf{Bottom right}: True negative rate ratio.
+    Results from 30 repeats for the Coloured MNIST dataset with two digits, 2 and 4, with \emph{subgroup bias} for the colour `{\color{purple}purple}': for {\color{purple}purple}, only the digit class `2' is present.
+    \textsc{Top left}: Accuracy.
+    \textsc{Top right}: Positive rate ratio.
+    \textsc{Bottom left}: True positive rate ratio.
+    \textsc{Bottom right}: True negative rate ratio.
     For the \texttt{Ranking} clustering, the clustering accuracy was 96\% $\pm$ 6\%;
     for \texttt{K-means} it was 64\% $\pm$ 10\%.
     For an explanation of \texttt{Ranking (8)} and \texttt{K-means (8)} see section~\ref{sec:overclustering}.
@@ -386,16 +389,16 @@ Additionally, we compute the Hirschfeld-Gebelein-R\'enyi (HGR) maximal correlati
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_alt_pr.pdf}
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_alt_tpr.pdf}
 %   \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_alt_tnr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_acc.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_prr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_tprr.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_tnrr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_acc.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_prr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_tprr.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_2v4_miss_s_overcluster_tnrr.pdf}
   \caption{
-    Results from \textbf{30 repeats} for the Coloured MNIST dataset with two digits, 2 and 4, with a \emph{missing subgroup}: the training dataset only has {\color{green}green} digits.
-    \textbf{Top left}: Accuracy.
-    \textbf{Top right}: Positive rate ratio.
-    \textbf{Bottom left}: True positive rate ratio.
-    \textbf{Bottom right}: True negative rate ratio.
+    Results from 30 repeats for the Coloured MNIST dataset with two digits, 2 and 4, with a \emph{missing subgroup}: the training dataset only has {\color{green}green} digits.
+    \textsc{Top left}: Accuracy.
+    \textsc{Top right}: Positive rate ratio.
+    \textsc{Bottom left}: True positive rate ratio.
+    \textsc{Bottom right}: True negative rate ratio.
     For the \texttt{Ranking} clustering, the clustering accuracy was 88\% $\pm$ 5\%;
     for \texttt{K-means} it was 72\% $\pm$ 16\%.
     For an explanation of \texttt{Ranking (8)} and \texttt{K-means (8)} see section~\ref{sec:overclustering}.
@@ -405,22 +408,22 @@ Additionally, we compute the Hirschfeld-Gebelein-R\'enyi (HGR) maximal correlati
 \begin{figure*}[htp]
   \centering
 %   \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_hgr.pdf}\\
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_prr-min.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_prd-max.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_tprr-min.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_tprd-max.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_tnrr-min.pdf}
-  \includegraphics[width=\columnwidth]{figures/cmnist_3dig_4miss_tnrd-max.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_prr-min.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_prd-max.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_tprr-min.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_tprd-max.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_tnrr-min.pdf}
+  \includegraphics[width=0.8\columnwidth]{figures/cmnist_3dig_4miss_tnrd-max.pdf}
   \caption{
-    Results from \textbf{30 repeats} for the Coloured MNIST dataset with three digits: `2', `4' and `6'.
+    Results from 30 repeats for the Coloured MNIST dataset with three digits: `2', `4' and `6'.
     Four combinations of digit and colour are missing: {\color{green}green} 2's, {\color{blue}blue} 2's, {\color{blue}blue} 4's and {\color{green}green} 6's.
-    % \textbf{First row}: Hirschfeld-Gebelein-R\'enyi maximal correlation between $S$ and $Y$.
-    \textbf{First row, left}: minimum of all positive rate ratios.
-    \textbf{First row, right}: maximum of all positive rate differences.
-    \textbf{Second row, left}: minimum of all true positive rate ratios.
-    \textbf{Second row, right}: maximum of all true positive rate differences.
-    \textbf{Third row, left}: minimum of all true negative rate ratios.
-    \textbf{Third row, right}: maximum of all true negative rate differences.
+    % \textsc{First row}: Hirschfeld-Gebelein-R\'enyi maximal correlation between $S$ and $Y$.
+    \textsc{First row, left}: minimum of all positive rate ratios.
+    \textsc{First row, right}: maximum of all positive rate differences.
+    \textsc{Second row, left}: minimum of all true positive rate ratios.
+    \textsc{Second row, right}: maximum of all true positive rate differences.
+    \textsc{Third row, left}: minimum of all true negative rate ratios.
+    \textsc{Third row, right}: maximum of all true negative rate differences.
   }%
   \label{fig:cmnist-3dig-4miss-add}
 \end{figure*}
@@ -431,13 +434,13 @@ Additionally, we compute the Hirschfeld-Gebelein-R\'enyi (HGR) maximal correlati
   \includegraphics[width=\columnwidth]{figures/celeba_gender_smiling_tprr.pdf}
   \includegraphics[width=\columnwidth]{figures/celeba_gender_smiling_tnrr.pdf}
   \caption{
-    Results from \textbf{10 repeats} for the CelebA dataset with the \emph{subgroup bias} setting.
+    Results from 10 repeats for the CelebA dataset with the \emph{subgroup bias} setting.
     The task is to predict ``smiling'' vs ``non-smiling'' and the subgroups are based on gender.
     The subgroup ``female'' is missing samples for the ``smiling'' class.
-    % \textbf{Top left}: Accuracy.
-    % \textbf{Top right}: Positive rate ratio.
-    \textbf{Left}: True positive rate ratio.
-    \textbf{Right}: True negative rate ratio.
+    % \textsc{Top left}: Accuracy.
+    % \textsc{Top right}: Positive rate ratio.
+    \textsc{Left}: True positive rate ratio.
+    \textsc{Right}: True negative rate ratio.
   }%
   \label{fig:celeba-gender-smiling-add}
 \end{figure*}
